Bugfix in horizontal scroll

--- a/assets/less/project/main.less
+++ b/assets/less/project/main.less
@@ -1,4 +1,5 @@
 [class*="col-"] { float: right; direction: rtl; text-align: right; }
+html { max-width: 100vw; overflow-x: hidden; }
 body {
     max-width: 100vw; overflow-x: hidden;
     &.no-scroll { overflow: hidden; }
